# registry-operator

./: .commitlintrc.js  .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  Brewfile  CHANGELOG.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT  README.md  ROADMAP.md  bundle.Dockerfile  go.mod  go.sum  kustomization.yaml  mkdocs.yml  renovate.json  tools.go  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yaml  question.yaml
.github/workflows/: autopilot.yaml  go.yaml  kube.yaml  linters-tests-image.yaml  linters.yaml  py-linters.yaml  release-please.yaml  release.yaml  semantic-pr.yaml  tests.yaml
api/v1alpha1/: groupversion_info.go  registry_conversion.go  registry_types.go  zz_generated.deepcopy.go
bundle/manifests/: registry-operator.clusterserviceversion.yaml  registry-operator.dev_registries.yaml
bundle/metadata/: annotations.yaml
charts/registry-operator/: .helmignore  Chart.yaml  (+3 more)
cmd/: main.go
docs/: .crd-ref-docs.yaml  index.md  requirements.txt
githooks/: install-hooks.sh
hack/: boilerplate.go.txt  install-golangci-lint.sh  kind.yaml  tags.sh  tools.go
main/: 404.html  index.html  requirements.txt
tests/: README.md  pyproject.toml
tests/e2e/: __init__.py  test_sanity.py
tests/e2e/features/: sanity.feature
tests/e2e/framework/: __init__.py  kubernetes.py  utils.py
tests/e2e/smoke-test/: chainsaw-test.yaml
tests/e2e/smoke-test/resources/: nginx.Pod.yaml
v0.0/: 404.html  index.html
v0.1/: 404.html  index.html
v0.3/: 404.html  requirements.txt
(+147 files in other folders)
